# libranet-flask

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  justfile  license.md  makefile  poetry.toml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: dependabot-auto-merge.yaml  linting.yaml  testing.yaml
.just/: flask.justfile  gh.justfile  gunicorn.justfile  uvicorn.justfile
.make/: 00-help.mk  01-path.mk  03-dotenv.mk  05-git.mk  10-pep8.mk  20-pytest.mk  25-sphinx.mk  30-pre-commit.mk  45-flask.mk  50-bandit.mk  55-poetry.mk  80-clean.mk
docs/: changes.md  conf.py  dir-structure.rst  index.rst  readme.md  requirements.rst
etc/: bandit-baseline.json  demo.yml  logging.yaml  logging.yml  pythonstartup.py
etc/ipython/profile_default/startup/: 04-entrypoints.py  10-logging.py  20-flask.py  20-rich.py  30-settings.py
etc/ipython/profile_default/startup/_archive/: 04-entrypoints.py  05-warnings.py  10-logging.py  11-requests.py  13-requests-httpformatting.py  20-flask.py
etc/requirements/: required-debian.txt  required-rpm-rhel.txt
etc/supervisord.d/: gunicorn.conf
src/demo_flask/: __init__.py  cli.py  endpoints.py  formatter.py  main.py
src/libranet_flask/: __init__.py  about.py  cfg.py  cli.py  endpoints.py  formatter.py  logging.py  logging.yaml  main.py
src/libranet_flask/cli/: __init__.py  flask.py  subcmd1.py
src/libranet_flask/utils/: __init__.py
tests/: conftest.py  test_about.py  test_cfg.py  test_cli.py  test_cli_flask.py  test_endpoints.py  test_init.py  test_logging.py  test_main.py
tests/_helpers/: __init__.py
