# This is a comment.
# syntax-documentation:
#  - https://python-poetry.org/docs/pyproject
#  - https://flit.readthedocs.io/en/latest/pyproject_toml.html
#
# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.
#
# - relative paths are relative to this file.

[build-system]
requires = ["poetry>=1.1", "poetry-dynamic-versioning"]
build-backend = "poetry.masonry.api"


[tool.bandit]
# bandit does not use this config by default. you need to invoke
# "bandit --configfile pyproject.toml"
# see https://github.com/PyCQA/bandit/issues/318"
baseline = "etc/bandit-baseline.json"
targets = ["src"]
recursive = true
exclude_dirs = [".venv", "var"]
skips = ["B101"]


[tool.black]
include = '\.py$'          # regex -> single-quotes
line-length = 120
target_version = ["py310"]


[tool.coverage.html]
directory = "var/coverage/html"

[tool.coverage.xml]
output = "var/coverage/coverage.xml"


[tool.coverage.report]
# cfr. https://coverage.readthedocs.io/en/coverage-4.2/excluding.html
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
include = ["src/*"]

[tool.coverage.run]
branch = true
data_file = "var/coverage/coverage.db" # defaults to .coverage


[tool.flake8]
max_line_length = 140
# exclude = "bindings"
per_file_ignores = [
    "__init__.py:F401", # F401: imported but unused
]


[tool.ipdb]
context = 5
ipython_profile = "ipdb" # to be implemented, see https://github.com/gotcha/ipdb/issues/185


[tool.isort]
line_length = 120             # corresponds to -w  flag
multi_line_output = 3         # corresponds to -m  flag
include_trailing_comma = true # corresponds to -tc flag
known_third_party = []
profile = "black"
# skip_glob = '^((?!py$).)*$'   # isort all Python files  # regex -> single-quotes


[tool.mypy]
# cfr https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
cache_dir = "var/cache/mypy"
check_untyped_defs = true
# disallow_untyped_defs = true
exclude = '^bin/'              # regex -> single-quotes
ignore_missing_imports = true
mypy_path = ["./src", "tests"]


[tool.nox]
envdir = "var/cache/nox"


[tool.poetry]
name = "demo_flask"
version = "0.0.0" # version managed by poetry-dynamic-versioning
license = "MIT"
description = "Demo flaks-project"
readme = "docs/readme.md"
authors = ["Wouter Vanden Hove <wouter@libranet.eu>"]
maintainers = ["Wouter Vanden Hove <wouter@libranet.eu>"]
homepage = "https://github.com/libranet/autoadd_bindir"
repository = "https://github.com/libranet/libranet-demo-flask"
documentation = "https://github.com/libranet/libranet-demo-flask/"
keywords = ["libranet", "demo", "gitlab", "docker", "flask"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
]
packages = [{ include = "demo_flask", from = "src" }]


[tool.poetry.dependencies]
python = ">=3.10.0,<4.0"
autoread-dotenv = ">=0.0"
Flask = ">=2.1"
Flask-Cors = ">=3.0"
Jinja2 = ">=3.1.2"
libranet-logging = ">=0.0"
# autoadd-bindir = ">=0.0"
httpclient-logging = ">=1.0"
httpx = ">=0.24.0"

[tool.poetry.group.dev.dependencies]
bandit = { extras = ["toml"], version = ">=1.7" }
black = ">=22.1"
flake8 = ">=4.0"
flake8-pyproject = ">=1.2"
isort = ">=5.10"
pre-commit = ">=2.14"
pre-commit-hooks = ">=4.1"
pylint = ">=2.12"
ruff = ">=0.0"

[tool.poetry.group.deploy.dependencies]
gunicorn = ">=20.1"
supervisor = ">=4.2"
uvicorn = ">=0.21"
waitress = ">=2.1"

[tool.poetry.group.dist.dependencies]
pyroma = ">=4.2"
twine = ">=4.0"

[tool.poetry.group.docs.dependencies]
autoapi = ">=2.0"
recommonmark = ">=0.7"
Sphinx = ">=4.4"
sphinx-autoapi = ">=1.8"
sphinx-markdown-tables = ">=0.0"
sphinx-rtd-theme = { version = ">=1.2.0rc3", allow-prereleases = true }

[tool.poetry.group.ipython.dependencies]
ipdb = ">=0.13"
ipython = ">=8.11"

[tool.poetry.group.profiling.dependencies]
importtime-waterfall = ">=1.0"
tuna = ">=0.5"

[tool.poetry.group.testing.dependencies]
coverage = ">=7.2"
pytest = ">=7.0"
pytest-cov = ">=3.0"
# pytest-freezegun = ">=0.4"  # superseded by pytest-freezer
pytest-freezer = ">=0.4"
pytest-mock = ">=3.10"

[tool.poetry.group.typing.dependencies]
lxml = { version = ">=4.9", optional = true, allow-prereleases = false } # mypy coverage-report
mypy = ">=0.9"
types-cachetools = ">=5.3.0"
types-python-dateutil = ">=2.8"
types-requests = ">=2.28"


[tool.poetry.scripts]
demo-flask = "demo_flask.cli:hello"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/libranet/libranet-demo-flask/issues"

[tool.poetry.plugins."sitecustomize"]
yaml_add_constructor_env = "libranet_logging.yaml:add_constructor"


[tool.poetry-dynamic-versioning]
# cfr https://github.com/mtkennerly/poetry-dynamic-versioning
enable = true
vcs = "git"
style = "semver"


[tool.poetry-dynamic-versioning.substitution]
files = ["src/*/__init__.py", "src/*/__version__.py", "docs/changes.rst"]


[tool.pylint.format]
max-line-length = 120
good-names = [
    "i",  # counter in loop
    "ok", # status
    "ts", # timestamp or timeseries object
]

[tool.pylint.messages_control]
disable = [
    "C0116", # missing-function-docstring
]


[tool.pyright]
# VSCode will log an error if this section is missing
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
include = ["src", "tests"]


[tool.pytest.ini_options]
addopts = "--junit-xml='var/coverage/pytest.xml'" # the junit-report is used to report coverage in gitlab
cache_dir = "var/cache/pytest"
filterwarnings = [
    # "ignore:Coverage disabled via --no-cov switch!:pytest.PytestWarning:pytest_cov.plugin",
]
log_cli = false # enable to show log-output
log_cli_level = "NOTSET"
markers = ["unit", "integration"]
testpaths = ["tests"]


[tool.tox]
# see https://tox.wiki/en/3.5.0/example/basic.html#pyproject-toml-tox-legacy-ini
legacy_tox_ini = """
[tox]
envlist = py{39,310,311}
# envlist = [py39, py310, py311]
isolated_build = True
toxworkdir = var/cache/tox

[testenv]
allowlist_externals =
    make
    poetry
skip_install = true
commands =
    make install
    pytest --pdb --exitfirst
"""


[tool.ruff]
cache-dir = "var/cache/ruff"
line-length = 120

# [tool.twine]
# sign = "yes"
# distributions = "dist/wheel/"
# repository = "..."
